--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
                   <p class="lean text-center">by using fetch and 2 other APIs, this webpage tells a visitor who exactly is in space at any given moment,
                     along with a brief summary of the astronaut. 
                     javascript was used to create the dynamic layout and make the fetch requests.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="whoisinspace/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-directory" role="tabpanel" aria-labelledby="list-directory-list">
                   <p class="lean text-center">by using the fetch API and the randomuser.me random people generator, this webpage displays a page
                     of randomized employees in a fake company and includes a filtering search function.<br>
-                    <a href="#" target="_blank">&#9758; check it out here</a>
+                    <a href="directory-project/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-dash" role="tabpanel" aria-labelledby="list-dash-list">
                   <p class="lean text-center">this is a responsive prototype of an employee dashboard. dynamic graphs were created
                     with the chart library chartjs and javascript was added for an alert banner. the layout was created without any frameworks and
                     was done with css flexgrid.<br>
-                    <a href="directory-project/index.html" target="_blank">&#9758; check it out here</a>
+                    <a href="dashboard-project/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">
