Final project added

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade" id="list-kyle" role="tabpanel" aria-labelledby="list-kyle-list">
                     <p class="lean text-center">this responsive and simple page was designed for a close friend in order to showcase his current series
-                        of embroidery works. i animated custom made SVG images that were traced using inkscape from an image of his needlework.<br>
+                        of embroidery works. i animated custom made SVG images that were traced using inkscape from an image of his needlework for the page.<br>
                         <a href="kyle-site/index.html" target="_blank">&#9758; check it out here</a>
                     </p>
                 </div>
@@ -78,9 +78,9 @@
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-fotos" role="tabpanel" aria-labelledby="list-fotos-list">
-                  <p class="lean text-center">this project was an excercise in jquery plugins and pure javascript. using a lightbox plugin
+                  <p class="lean text-center">this project was an excercise in jquery plugins and pure javascript. by using a lightbox plugin
                     and javascript to create a filtering search bar, i built this photo gallery.<br>
-                    <a href="Project-5-Techdegree/index.html" target="_blank">&#9758; check it out here</a>
+                    <a href="jquery-lightboxproj/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-space" role="tabpanel" aria-labelledby="list-space-list">
