--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#" class="highlighter text-decoration-none">kendall bendheim</a>
                 </h1>
                 <h3 class="text-center highlighter font-weight-normal mb-4">retired Magician, blossoming web designer</h3>
-                <p class="lead highlighter mt-4 ml-4 text-right">based in Barcelona, bred in sweet Virginia</p>
+                <p class="lead highlighter mt-4 ml-4 text-left">based in Barcelona, bred in sweet Virginia</p>
             </div>
         </div>
 
