--- a/guess-le-phrase/index.html
+++ b/guess-le-phrase/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Guess Le Phrase</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="main-container">
