--- a/whoisinspace/index.html
+++ b/whoisinspace/index.html
@@ -8,7 +8,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>How Many People Are in Space?</h1>
+  <h1>Who is in Space Right Now?</h1>
   <main>
     <button>View all the People</button>
     <div id="people"></div>
