Form validation attempt

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 </div>
                 <div class="tab-pane fade" id="list-madlibs" role="tabpanel" aria-labelledby="list-madlib-list">
                   <p class="lean text-center">this is a madlib i wrote and programmed with simple javascript. i intend to improve upon it by substituting the various input constants
-                    with a loop, adding an alert for empty input, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
+                    with a loop, adding form validation, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
                     <a href="MAD-libz/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
