Minor changes final

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade" id="list-kyle" role="tabpanel" aria-labelledby="list-kyle-list">
                     <p class="lean text-center">this responsive and simple page was designed for a close friend in order to showcase his current series
-                        of embroidery works. i animated custom made SVG images that were traced using inkscape from an image of his needlework for the page.<br>
+                        of embroidery works. I animated custom made SVG images that were traced using inkscape from an image of his needlework for the page.<br>
                         <a href="kyle-site/index.html" target="_blank">&#9758; check it out here</a>
                     </p>
                 </div>
                 <div class="tab-pane fade" id="list-guess" role="tabpanel" aria-labelledby="list-guess-list">
-                  <p class="lean text-center">as a part of the techdegree i built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
+                  <p class="lean text-center">as a part of the techdegree I built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
                     the user may be required to guess for as well as functions to randomize the phrases and to keep score and end the game when lost or won.
                     <br>
                     <a href="guess-le-phrase/index.html" target="_blank">&#9758; check it out here</a>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="tab-pane fade" id="list-fotos" role="tabpanel" aria-labelledby="list-fotos-list">
                   <p class="lean text-center">this project was an excercise in jquery plugins and pure javascript. by using a lightbox plugin
-                    and javascript to create a filtering search bar, i built this photo gallery.<br>
+                    and javascript to create a filtering search bar, I built this photo gallery.<br>
                     <a href="jquery-lightboxproj/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
@@ -105,12 +105,12 @@
                 </div>
                 <div class="tab-pane fade" id="list-listicles" role="tabpanel" aria-labelledby="list-listicles-list">
                   <p class="lean text-center">one of my favorite hobbies is writing lists, and recently I've begun writing satirical lists a lá Dave Eggers' online
-                    magazine "McSweeney's". i've animated this page with css to show modal windows with these lists and intend to update it semi-regularly and improve the design.<br>
+                    magazine "McSweeney's". I've animated this page with css and had it show modal windows with these lists and intend to update it semi-regularly and improve the design.<br>
                     <a href="listiclepage/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
                 </div>
                 <div class="tab-pane fade" id="list-madlibs" role="tabpanel" aria-labelledby="list-madlib-list">
-                  <p class="lean text-center">this is a madlib i wrote and programmed with simple javascript. i intend to improve upon it by substituting the various input constants
+                  <p class="lean text-center">this is a madlib I wrote and programmed with simple javascript. I intend to improve upon it by substituting the various input variables
                     with a loop, adding form validation, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
                     <a href="MAD-libz/index.html" target="_blank">&#9758; check it out here</a>
                 </p>
