Minor changes pt 3

--- a/listiclepage/index.html
+++ b/listiclepage/index.html
@@ -14,10 +14,10 @@
 <body>
 
 <div class="container genHead d-flex align-items-center justify-content-around">
-  <span class="d-flex sunsign">&#9737;</span>
+  <span class="d-none d-md-flex sunsign">&#9737;</span>
     <h1 class="header text-center"><span class="header-text d-flex" id="simple_arc">LISTICLES by Candle Bedtime
       </span></h1>
-  <span class="d-flex sunsign">&#9737;</span>  
+  <span class="d-none d-md-flex sunsign">&#9737;</span>  
 </div>  
 
 <div class="listIndex container">
@@ -41,7 +41,7 @@
             <span class="list-digits">4</span>
             <span class="list-scrip">Animals You Were Told Not to Worry about, But you Should Worry About (AKA “Silent Killers”)</span>
           </div>  
-            <img class="d-flex img-fluid modalimg" src="hippo.png" alt='hippo'>
+            <img class="d-none d-md-flex img-fluid modalimg" src="hippo.png" alt='hippo'>
             </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -91,7 +91,7 @@
               <span class="list-digits">9</span>
               <span class="list-scrip">Names You Could Image Nick Cage Would Give His Offspring</span>
             </div>  
-              <img class="d-flex img-fluid modalimg" src="slender.png" alt='hippo'>
+              <img class="d-none d-md-flex img-fluid modalimg" src="slender.png" alt='slenderman'>
             </h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -125,7 +125,7 @@
                 <span class="list-digits">6</span>
                 <span class="list-scrip">Ingredients for a Memorable Girls' Night!</span>
               </div>  
-                <img class="d-flex img-fluid modalimg" src="voodooDoll.png" alt='hippo'>
+                <img class="d-none d-md-flex img-fluid modalimg" src="voodooDoll.png" alt='voodoodoll'>
               </h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
@@ -207,7 +207,7 @@
                 <span class="list-digits">2</span>
                 <span class="list-scrip">Things I Thought Would Be a Much Bigger Deal in My Adult Life as a Child</span>
               </div>  
-                <img class="d-flex img-fluid modalimg" src="scarecrow.png" alt='hippo'>
+                <img class="d-none d-md-flex img-fluid modalimg" src="scarecrow.png" alt='scarecrow'>
               </h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
