--- a/dashboard-project/index.html
+++ b/dashboard-project/index.html
@@ -97,7 +97,7 @@
 
     <div class="social-container">
         <div class="social-image">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+            <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" x="0" y="0" viewBox="0 0 50 50">
                 <path fill="#fff" d="M40.43 21.739h-7.645v-5.014c0-1.883 1.248-2.322 2.127-2.322h5.395V6.125l-7.43-.029c-8.248 0-10.125 6.174-10.125 10.125v5.518h-4.77v8.53h4.77v24.137h10.033V30.269h6.77l.875-8.53z"/>
             </svg>
         </div>
