Minor layout changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- portfolio cards -->
 <div class="content-shell container-fluid">
-    <h1 id="portfolio" class="text-center mb-5 pt-5">projects</h1>
+    <h1 id="portfolio" class="text-left pt-5">projects</h1>
     <div class="container main-project-div d-md-flex">
       <!-- before consequence -->
       <div class="row justify-content-md-between">
@@ -333,7 +333,7 @@
 
         <!-- about section start -->
 <div class="container-fluid about-shell" id="about">
-            <h1 class="text-right mx-4">a brief history</h1>
+            <h1 class="mx-4">a brief history</h1>
         <div class="container pb-5 d-md-flex flex-md-row justify-content-md-around">
                 <img class="img-fluid col-md myself" src="images/myself.jpeg" alt="myself">
                 <p class="lean col-md-5 bio">
