Stitches not showing up fixed

--- a/kyle-site/index.html
+++ b/kyle-site/index.html
@@ -90,10 +90,10 @@
             <img src="imgs/stitches/Dip.jpg" class="d-block w-100" alt="dip stitch">
         </div>
         <div class="carousel-item">
-            <img src="imgs/stitches/farewell.jpg" class="d-block w-100" alt="farewell stitch">
+            <img src="imgs/stitches/Farewell.jpg" class="d-block w-100" alt="farewell stitch">
         </div>
         <div class="carousel-item">
-            <img src="imgs/stitches/relax.jpg" class="d-block w-100" alt="relax stitch">
+            <img src="imgs/stitches/Relax.jpg" class="d-block w-100" alt="relax stitch">
         </div>
         <div class="carousel-item">
             <img src="imgs/stitches/Self.jpg" class="d-block w-100" alt="self stitch">
