reverted list styles

--- a/listiclepage/index.html
+++ b/listiclepage/index.html
@@ -230,7 +230,7 @@
 </div>
 
   <div class="container foot-img d-flex justify-content-center">
-      <img class="img-fluid dripdrop d-flex justify-content-center" src="water.png" alt="drop of water">  
+      <img class="img-fluid dripdrop d-none d-md-flex justify-content-center" src="water.png" alt="drop of water">  
   </div>      
 </div> <!--main content div ends here -->
 
