More minor changes and moves

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p class="lean">this is a madlib I wrote and programmed with simple javascript. I intend to improve upon it by substituting the various input variables
                   with a loop, adding form validation, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
                 </p>
-                  <a href="MAD-libz/index.html" target="_blank">&#9758; check it out here</a>
+                  <a href="MAD-libz/madLib-1/index.html" target="_blank">&#9758; check it out here</a>
               </div>
             </div>
           </div>
