--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
               <div class="modal-body  d-flex flex-column">
                 <p class="lean">this is a responsive prototype of an employee dashboard. dynamic graphs were created
-                  with the chart library chartjs and javascript was added for an alert banner. the layout was created without any frameworks and
+                  with the chart library chartJs and javascript was added for an alert banner. the layout was created without any frameworks and
                   was done with css flexgrid.<br>
                 </p>
                 <a href="dashboard-project/index.html" target="_blank">&#9758; check it out here</a>
@@ -315,17 +315,16 @@
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="space-title">who's in space?</h5>
+                <h5 class="modal-title" id="space-title">react trivia</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body d-flex flex-column">
-                <p class="lean">by using fetch and 2 other APIs, this webpage tells a visitor who exactly is in space at any given moment,
-                  along with a brief summary of the astronaut. 
-                  javascript was used to create the dynamic layout and make the fetch requests.<br>
+                <p class="lean">this react app is a simple trivia quiz built using typescript in react, as well as the open trivia database
+                  API. the difficulty can be manipulated in the script and the questions span various subjects.<br>
                 </p>
-                  <a href="whoisinspace/index.html" target="_blank">&#9758; check it out here</a>
+                  <a href="https://okaykendall.github.io/react-quiz/" target="_blank">&#9758; check it out here</a>
               </div>
             </div>
           </div>
