Music app added
“Feelings radio” added to portfolio to replace glitchy guess the phrase
came. Responsive design will be soon

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1 class="display-4 text-left mb-4 highlighter">
                    kendall bendheim
                 </h1>
-                <h3 class="text-center highlighter font-weight-normal mb-4">retired Magician, blossoming web designer</h3>
+                <h3 class="text-center highlighter font-weight-normal mb-4">retired Magician, blossoming web developer</h3>
                 <p class="lead highlighter mt-4 ml-4 text-left">based in Barcelona, bred in sweet Virginia</p>
             </div>
         </div>
@@ -212,17 +212,18 @@
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="guess-title">guess that phrase</h5>
+                <h5 class="modal-title" id="guess-title">feelings radio</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body d-flex flex-column">
-                <p class="lean">as a part of the techdegree I built javascript for this "guess the phrase" game. it includes an array of 5 different phrases
-                  the user may be required to guess for as well as functions to randomize the phrases and to keep score and end the game when lost or won.
+                <p class="lean">
+                  this is a "feelings radio" that i built over a week or so. it features an array of songs that when a feeling is clicked, plays the corresponding song.
+                  i used a javascript random function to shuffle the songs, and i intend in the future to use urls instead of local audio files to populate the playlist.
                   <br>
                 </p>
-                  <a href="guess-le-phrase/index.html" target="_blank">&#9758; check it out here</a>
+                  <a href="music-app/index.html" target="_blank">&#9758; check it out here</a>
               </div>
             </div>
           </div>
