Replaced mad libs with fortune teller
Will update mad libs when I have more written

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
 
       <!-- madlibz div -->
-      <div class="madlibs-div project-div">
-        <a class="btn" data-toggle="modal" data-target="#madlibs-modal">
+      <div class="fortune-div project-div">
+        <a class="btn" data-toggle="modal" data-target="#fortune-modal">
           <svg width="224" height="217" xmlns="http://www.w3.org/2000/svg">
             <g>
              <rect fill="transparent" height="602" width="802" y="-1" x="-1"/>
@@ -137,20 +137,20 @@
             </g>
            </svg>
         </a>
-        <div class="modal fade" id="madlibs-modal" tabindex="-1" aria-labelledby="madlibs-modal" aria-hidden="true">
+        <div class="modal fade" id="fortune-modal" tabindex="-1" aria-labelledby="fortune-modal" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="madlibs-title">mad libs</h5>
+                <h5 class="modal-title" id="fortune-title">fortune teller</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body d-flex flex-column">
-                <p class="lean">this is a madlib I wrote and programmed with simple javascript. I intend to improve upon it by substituting the various input variables
-                  with a loop, adding form validation, and writing more madlibs with an option to choose one by theme or randomly on a landing page.<br>
+                <p class="lean">this project was an exercise in css animation and javascript practices. i used jquery for various effects and key events, and fetch API to retrieve data 
+                  from the advice slip API and a moon phase API. it mimics the classic toy the "magic 8 ball" in the fortune teller's responses.<br>
                 </p>
-                  <a href="MAD-libz/madLib-1/index.html" target="_blank">&#9758; check it out here</a>
+                  <a href="fortune-teller/index.html" target="_blank">&#9758; check it out here</a>
               </div>
             </div>
           </div>
